--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_boilerplate
-description: A simple boilerplate project
+name: bintango_indonesian_translater
+description: Bintango indonesian translater for web
 version: 1.0.0+1
 publish_to: none
 
@@ -25,7 +25,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   go_router: ^6.0.3
   easy_localization: ^3.0.7
-  firebase_analytics: ^9.1.11
+  firebase_core: ^2.31.0
+  firebase_analytics: ^10.10.5
   app_tracking_transparency: ^2.0.5
   json_annotation: ^4.9.0
 
@@ -41,6 +42,7 @@ dev_dependencies:
   pubspec_dependency_sorter: ^1.0.4
   riverpod_generator: ^2.3.8
   very_good_analysis: 4.0.0+1
+  rename: ^3.0.2
 
 ## Install derry from https://pub.dev/packages/derry and run derry build, derry watch, derry gen
 scripts: derry.yaml
