update application icon

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dev_dependencies:
   riverpod_generator: ^2.3.8
   very_good_analysis: 4.0.0+1
   rename: ^3.0.2
+  flutter_launcher_icons:
 
 ## Install derry from https://pub.dev/packages/derry and run derry build, derry watch, derry gen
 scripts: derry.yaml
@@ -74,3 +75,15 @@ flutter:
     - assets/env/
     - assets/
     #- assets/image/
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/app_logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/app_logo.png"
+    background_color: "#FFFFFF"
+    theme_color: "#FFFFFF"
