implement input and output area UI

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,7 @@ flutter:
     - assets/env/.env.development
     - assets/env/
     - assets/
-    #- assets/image/
+    - assets/image/
 
 flutter_launcher_icons:
   android: "launcher_icon"
