update api provider

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,6 @@ lib/generated/intl/messages_all.dart
 *.aab
 .idea/dictionaries/sadmansamee.xml
 firebase_options.dart
+
+# environment variable
+.assets/env/*
