--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   firebase_analytics: ^10.10.5
   app_tracking_transparency: ^2.0.5
   json_annotation: ^4.9.0
-
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   build_runner: ^2.4.7
