--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   app_tracking_transparency: ^2.0.5
   json_annotation: ^4.9.0
   auto_size_text: ^3.0.0
+  supabase_flutter: ^2.5.3
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   build_runner: ^2.4.7
