--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   auto_size_text: ^3.0.0
   supabase_flutter: ^2.5.3
   flutter_staggered_grid_view: ^0.7.0
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   build_runner: ^2.4.7
