--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Flutter Boilerplate",
-    "short_name": "Flutter Boilerplate",
+    "name": "BINTANGO Translate",
+    "short_name": "BINTANGO Translate",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#FFFFFF",
