--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   supabase_flutter: ^2.5.3
   flutter_staggered_grid_view: ^0.7.0
   url_launcher: ^6.2.6
+  responsive_framework: ^1.4.0
 
 dev_dependencies:
   build_runner: ^2.4.7
