--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   url_launcher: ^6.2.6
   responsive_framework: ^1.4.0
+  collection: ^1.18.0
 
 dev_dependencies:
   build_runner: ^2.4.7
