--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   url_launcher: ^6.2.6
   responsive_framework: ^1.4.0
   collection: ^1.18.0
+  flutter_markdown: ^0.7.1
 
 dev_dependencies:
   build_runner: ^2.4.7
