--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   flutter_secure_storage: 7.0.1
   shared_preferences: ^2.0.15
   google_fonts: ^4.0.1
-  lottie: ^2.2.0
+  lottie: ^3.1.2
   connectivity_plus: ^3.0.2
   flutter_dotenv: ^5.0.2
   flutter_svg: ^2.0.10+1
@@ -81,6 +81,7 @@ flutter:
     - assets/env/
     - assets/
     - assets/image/
+    - assets/lottie/
 
 flutter_launcher_icons:
   android: "launcher_icon"
