--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   responsive_framework: ^1.4.0
   collection: ^1.18.0
   flutter_markdown: ^0.7.1
+  flutter_animate: ^4.5.0
 
 dev_dependencies:
   build_runner: ^2.4.7
